Add depth test to holo render type